Fix -proc:full flag in JavacJctFlagBuilderImplTest
Signed-off-by: Ashley <73482956+ascopes@users.noreply.github.com>